# chessgui

./: .dockerignore  .gitignore  .harness.json  BACKLOG.md  CLAUDE.md  CURRENT_TASKS.md  DONE.md  LAST_SESSION.md  LIBRARIAN_FLAGS.md  SESSIONS_ARCHIVE.md  components.json  deploy.sh  index.html  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
.ai-dev/: 2026-07-15-1232-mentor-gpt.md
__tests__/: annotations.test.ts  arena-roster.test.ts  calibration.test.ts  chess-bugs.test.ts  database-mock.test.ts  eco.test.ts  engine-settings.test.ts  explorer-stats.test.ts  game-replay.test.ts  game-tree.test.ts  human-eval-tree.test.ts  human-eval.test.ts  kv-store.test.ts  lichess-explorer.test.ts  material.test.ts  persona.test.ts  pgn.test.ts  playout.test.ts  puzzles.test.ts  roster.test.ts  spar-render.test.ts  spar-results.test.ts  spar.test.ts  take-back.test.ts  time-elo.test.ts  tournament-analysis-render.test.ts  tournament-analysis.test.ts  tournament.test.ts  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: batch_smoke.rs  calibrate.rs  current_smoke.rs  full_match.rs  import_cbh.rs  match_smoke.rs  time_odds_ladder.rs
src-tauri/icons/: icon.icns
src-tauri/src/: calibration.rs  cbh.rs  coach.rs  db.rs  lib.rs  machine.rs  maia.rs  match_runner.rs  persona.rs  uci.rs  vision.rs
src-tauri/tests/fixtures/: cliffs.jsonl  sample.pgn
tools/material-backfill/: Cargo.toml  README.md
tools/material-backfill/src/: main.rs
(+466 files in other folders)
