[package]
name = "chessgui"
version = "0.3.0"
description = "A beautiful chess GUI for macOS powered by Stockfish"
authors = ["hjalti"]
edition = "2021"

[lib]
name = "chessgui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
shakmaty = "0.30"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
pgn-reader = "0.29.0"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
